Fix: Double scroll bar issue.

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -1,2 +1,3 @@
-#text{height:95% !important;border:none;padding:5px;position:absolute;top:19;background:transparent !important}
-div.prism-live{position:absolute!important;left:80!important; top: 46 !important;height:95% !important;width:95% !important}
+#text{height:95% !important;border:none;padding:5px;position:absolute;top:19;background:transparent !important; scrollbar-width: none;}
+#text::-webkit-scrollbar{display: none;}
+div.prism-live{position:absolute!important;left:80!important; top: 46 !important;height:95% !important;width:95% !important; }
